--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -85,5 +85,7 @@
             © UXDEV. all rights reserved.
         </footer>
     </div>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
