--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="wrap">
-        <header>
+        <header class="header">
             <nav class="local-nav">
                 <div class="local-nav-links">
                     <a href="#">UX DEV.</a>
