add scroll Animation

--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -33,16 +33,16 @@
         <main class="main">
             <section class="scroll-section"  id="scroll-section-0">
                 <h1>ETRIBE UX Developement Group</h1>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message a">
                     <p>업무에 방해되지 않는<br>자유로운 업무 분위기</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message b">
                     <p>그룹원들과의<br>자유로운 친목 활동</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message c">
                     <p>온종일 편안한<br>사무실 분위기</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message d">
                     <p>각 직무별 코드리뷰 문화</p>
                 </div>
             </section>
