--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -52,19 +52,29 @@
                     <p>
                         <strong>보통 스크롤 영역</strong>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odit, eaque beatae tempore repellendus iure nisi laboriosam? Perferendis rem eaque nemo iure. Iure, laudantium. Ea minus aspernatur earum quaerat eius.
                     </p>
                 </div>
             </section>
             
             <section class="scroll-section"  id="scroll-section-2">
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message a">
                     <p><small>편안한 사무실 분위기</small>넓은 회의실</p>
                 </div>
-                <div class="sticky-elem desc-message">
+                <div class="sticky-elem desc-message b">
                     <p>이트라이브 UX DEV. 그룹은 다른 그룹과는 다른 독특한 문화를 많이 가지고 있습니다. 이는 그룹원 개개인의 개성이 너무도 뚜렷하고 특이해서 기존 집단과는 차별화된 문화를 만드는 원동력이 됩니다.</p>
                     <div class="pin"></div>
                 </div>
-                <div class="sticky-elem desc-message">
+                <div class="sticky-elem desc-message c">
                     <p>이트라이브 UX DEV. 그룹</p>
                     <div class="pin"></div>
                 </div>
@@ -77,6 +87,10 @@
                     자유로운 대화를 위한 회의실, 휴게실 공간.
                 </p>
                 <p class="canvas-caption">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, vero expedita est accusantium earum quisquam culpa atque iure! Ipsam illum magnam magni voluptates necessitatibus vel perferendis veritatis odit illo! Possimus?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, vero expedita est accusantium earum quisquam culpa atque iure! Ipsam illum magnam magni voluptates necessitatibus vel perferendis veritatis odit illo! Possimus?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, vero expedita est accusantium earum quisquam culpa atque iure! Ipsam illum magnam magni voluptates necessitatibus vel perferendis veritatis odit illo! Possimus?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, vero expedita est accusantium earum quisquam culpa atque iure! Ipsam illum magnam magni voluptates necessitatibus vel perferendis veritatis odit illo! Possimus?
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, vero expedita est accusantium earum quisquam culpa atque iure! Ipsam illum magnam magni voluptates necessitatibus vel perferendis veritatis odit illo! Possimus?
                 </p>
             </section>
