--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -33,6 +33,11 @@
         <main class="main">
             <section class="scroll-section"  id="scroll-section-0">
                 <h1>ETRIBE UX Developement Group</h1>
+
+                <div class="sticky-elem sticky-elem-canvas">
+                    <canvas id="video-canvas-0" width="1920" height="1080"></canvas>
+                </div>
+                
                 <div class="sticky-elem main-message a">
                     <p>업무에 방해되지 않는<br>자유로운 업무 분위기</p>
                 </div>
