좌우박스 스크립트 오류수정

--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -97,6 +97,7 @@
                     아이디어를 광활하게 펼칠<br>
                     자유로운 대화를 위한 회의실, 휴게실 공간.
                 </p>
+                <!-- 캔버스 추가 -->
                 <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
                 <p class="canvas-caption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, vero expedita est accusantium earum quisquam culpa atque iure! Ipsam illum magnam magni voluptates necessitatibus vel perferendis veritatis odit illo! Possimus?
