add scroll animation

--- a/apple-clone/test/smscroll.html
+++ b/apple-clone/test/smscroll.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>부드러운 스크롤</title>
+	<title>부드러운 애니메이션 감속</title>
 	<style>
 		body {
 			height: 500vh;
