add 105번 로딩효과 적용하기

--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <!-- 104번 로딩만들기 -->
+    <div class="loading">
+        <svg class="loading-circle">
+            <circle cx="50%" cy="50%" r="25"></circle>
+        </svg>
+    </div>
     <div class="wrap">
         <header class="header">
             <nav class="local-nav">
