--- a/apple-clone/index.html
+++ b/apple-clone/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body class="before-load">
     <!-- 104번 로딩만들기 -->
     <div class="loading">
         <svg class="loading-circle">
