--- a/amChart/chart_06.html
+++ b/amChart/chart_06.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>amChart4 Treemap 차트 예시</title>
+    <title>amChart4 Treemap 차트</title>
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
