--- a/amChart/linechart_01.html
+++ b/amChart/linechart_01.html
@@ -3,29 +3,107 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>amChart4 Treemap 차트 예시</title>
+    <title>linechart</title>
     <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
       #chartdiv {
         width: 100%;
         height: 600px;
-        margin: 0;
         border: 1px solid #ccc;
       }
     </style>
   </head>
   <body>
-    <!-- <div class="container">
-      <div class="treemap-chart-container" id="treemap-chart-01"></div>
-      <div class="treemap-chart-container" id="treemap-chart-02"></div>
-    </div> -->
     <div id="chartdiv"></div>
 
     <script src="./lib/core.js"></script>
     <script src="./lib/charts.js"></script>
+    <script src="./lib/animated.js"></script>
     <script src="./lib/material.js"></script>
     <script src="./lib/de_DE.js"></script>
     <script src="./lib/germanyLow.js"></script>
 
-    <!-- <script src="demo.js"></script> -->
+    <script>
+      am4core.ready(function () {
+        // Themes begin
+        am4core.useTheme(am4themes_animated);
+        // Themes end
+
+        // Create chart instance
+        var chart = am4core.create("chartdiv", am4charts.XYChart);
+
+        // Add data
+        chart.data = generatechartData();
+        function generatechartData() {
+          var chartData = [];
+          var firstDate = new Date();
+          firstDate.setDate(firstDate.getDate() - 150);
+          var visits = -40;
+          var b = 0.6;
+          for (var i = 0; i < 150; i++) {
+            // we create date objects here. In your data, you can have date strings
+            // and then set format of your dates using chart.dataDateFormat property,
+            // however when possible, use date objects, as this will speed up chart rendering.
+            var newDate = new Date(firstDate);
+            newDate.setDate(newDate.getDate() + i);
+            if (i > 80) {
+              b = 0.4;
+            }
+            visits += Math.round(
+              (Math.random() < b ? 1 : -1) * Math.random() * 10
+            );
+
+            chartData.push({
+              date: newDate,
+              visits: visits,
+            });
+          }
+          return chartData;
+        }
+
+        // Create axes
+        var dateAxis = chart.xAxes.push(new am4charts.DateAxis());
+        dateAxis.startLocation = 0.5;
+        dateAxis.endLocation = 0.5;
+
+        // Create value axis
+        var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
+
+        // Create series
+        var series = chart.series.push(new am4charts.LineSeries());
+        series.dataFields.valueY = "visits";
+        series.dataFields.dateX = "date";
+        series.strokeWidth = 3;
+        series.tooltipText = "{valueY.value}";
+        series.fillOpacity = 0.1;
+
+        // Create a range to change stroke for values below 0
+        var range = valueAxis.createSeriesRange(series);
+        range.value = 0;
+        range.endValue = -1000;
+        range.contents.stroke = chart.colors.getIndex(4);
+        range.contents.fill = range.contents.stroke;
+        range.contents.strokeOpacity = 0.7;
+        range.contents.fillOpacity = 0.1;
+
+        // Add cursor
+        chart.cursor = new am4charts.XYCursor();
+        chart.cursor.xAxis = dateAxis;
+        chart.scrollbarX = new am4core.Scrollbar();
+
+        series.tooltip.getFillFromObject = false;
+        series.tooltip.adapter.add("x", (x, target) => {
+          if (series.tooltip.tooltipDataItem.valueY < 0) {
+            series.tooltip.background.fill = chart.colors.getIndex(4);
+          } else {
+            series.tooltip.background.fill = chart.colors.getIndex(0);
+          }
+          return x;
+        });
+      }); // end am4core.ready()
+    </script>
   </body>
 </html>
