라인차트 그라데이션 성공

--- a/amChart/linechart_03.html
+++ b/amChart/linechart_03.html
@@ -10,7 +10,7 @@
         margin: 0;
       }
       #chartdiv {
-        width: 98%;
+        width: 90%;
         height: 600px;
         border: 1px solid #ccc;
         padding: 0;
@@ -76,7 +76,6 @@
 
         // Chart and Series settings...
         chart.padding(20, 20, 20, 20)
-        chart.legend = new am4charts.Legend()
 
         const dateAxis = chart.xAxes.push(new am4charts.DateAxis())
         dateAxis.renderer.minGridDistance = 70 // 날짜 레이블 간격 조정
@@ -93,40 +92,39 @@
         dateAxis.dateFormats.setKey('year', 'yy')
         dateAxis.periodChangeDateFormats.setKey('year', 'yy')
 
+        // dateAxis.title.text = "Turnover ($M)";
         dateAxis.renderer.grid.template.strokeOpacity = 0
         dateAxis.renderer.baseGrid.disabled = true
-
         dateAxis.renderer.labels.template.fill = am4core.color('#71747c')
         dateAxis.renderer.labels.template.fontSize = 14
 
         const valueAxis = chart.yAxes.push(new am4charts.ValueAxis())
         valueAxis.renderer.baseGrid.disabled = true
         valueAxis.renderer.grid.template.strokeOpacity = 1
-        valueAxis.renderer.grid.template.strokeDasharray = 3
         valueAxis.renderer.grid.template.stroke = am4core.color('#D4D8E2')
+        valueAxis.renderer.grid.template.strokeDasharray = 3
         valueAxis.renderer.labels.template.fill = am4core.color('#71747c')
         valueAxis.renderer.labels.template.fontSize = 14
-        // valueAxis.renderer.labels.template.location = 100; // 축 중앙에 위치
 
-        let series = null
         // Function to create series
+        let series
         function createSeries(field, name, lineColor, startColor, endColor) {
           series = chart.series.push(new am4charts.LineSeries())
           series.dataFields.valueY = field
           series.dataFields.dateX = 'date'
           series.name = name
           series.strokeWidth = 2
-          series.fillOpacity = 0.1
+          series.fillOpacity = 0.7
           series.tensionX = 0.7 // 곡선 효과 적용
 
           series.tooltipText = '{valueY.value}'
           series.stroke = am4core.color(lineColor) // 선 색상 설정
-          series.fill = series.stroke
+
           let gradient = new am4core.LinearGradient()
           gradient.addColor(am4core.color(startColor))
           gradient.addColor(am4core.color(endColor))
           gradient.rotation = 90
-          series.fill.gradient = gradient
+          series.fill = gradient
 
           return series
         }
@@ -135,63 +133,56 @@
         createSeries(
           'visits',
           'NAV',
-          'rgba(240, 41, 90, 0.9)',
           'rgba(240, 41, 90, 1)',
-          'rgba(240, 41, 90, 0.5)'
+          'rgba(240, 41, 90, 0.3)',
+          'rgba(240, 41, 90, 0)'
         )
         createSeries(
           'visits2',
           '기초지수',
-          'rgba(38, 193, 248, 0.9)',
-          'rgba(72, 150, 255, 1)',
-          'rgba(72, 150, 255, 0.5)'
+          'rgba(38, 193, 248, 1)',
+          'rgba(72, 150, 255, 0.3)',
+          'rgba(72, 150, 255, 0)'
         )
         createSeries(
           'visits3',
           '종가',
           'rgba(29, 181, 174, 1)',
-          'rgba(29, 181, 174, 1)',
-          'rgba(29, 181, 174, 0.5)'
+          'rgba(29, 181, 174, 0.3)',
+          'rgba(29, 181, 174, 0)'
         )
+
+        // 특정 날짜 설정
+        const targetDate = new Date(2024, 0, 3) // 2024년 1월 1일
+
+        // 커서에 별모양 아이콘 추가
+        chart.cursor = new am4charts.XYCursor()
+        chart.cursor.behavior = 'none' // 커서 동작 비활성화
+        chart.cursor.lineX.disabled = true
+        chart.cursor.lineY.disabled = true
+        chart.cursor.xAxis = dateAxis
+
+        chart.cursor.events.on('cursormoved', function (ev) {
+          const target = ev.target
+          if (target.cursor) {
+            const xAxis = target.cursor.xAxis
+            const date = xAxis.positionToDate(target.cursor.point.x)
+            if (date.getTime() === targetDate.getTime()) {
+              target.cursor.addChild(starIcon)
+            } else {
+              target.cursor.removeChild(starIcon)
+            }
+          }
+        })
 
         // Add cursor
         chart.cursor = new am4charts.XYCursor()
         chart.cursor.xAxis = dateAxis
         // chart.scrollbarX = new am4core.Scrollbar(); // hadle bar
 
-        const addIconEvent = () => {
-          // **별 모양 이미지 로드**
-
-          // Add simple bullet
-          const bullet = series.bullets.push(new am4charts.Bullet())
-          const image = bullet.createChild(am4core.Image)
-          image.href = './images/icon_star.svg'
-          image.width = 24
-          image.height = 24
-          image.horizontalCenter = 'middle'
-          image.verticalCenter = 'middle'
-
-          // **별 모양 오브젝트 생성**
-          bullet.sprite = image
-          bullet.hiddenState.properties.opacity = 0 // 마우스 오버 시 별 표시
-
-          // **별 위치 설정**
-          // bullet.locationX = 0; // 수평 기준 0 지점에 별 위치 설정
-          bullet.locationY = 0
-
-          bullet.events.on('hit', function (event) {
-            // 선택된 날짜 정보 가져오기
-            selectDataInfo()
-          })
-        }
-
-        addIconEvent()
-      })
-
-      const selectDataInfo = () => {
-        // 별 클릭 시 실행할 코드
-        console.log('별 클릭!')
-      }
+        // Add legend
+        chart.legend = new am4charts.Legend()
+      }) // end am4core.ready()
     </script>
   </body>
 </html>
