--- a/amChart/linechart_01.html
+++ b/amChart/linechart_01.html
@@ -116,17 +116,17 @@
           series.dataFields.dateX = 'date'
           series.name = name
           series.strokeWidth = 2
-          series.fillOpacity = 0.1
+          series.fillOpacity = 0.7
           series.tensionX = 0.7 // 곡선 효과 적용
 
           series.tooltipText = '{valueY.value}'
           series.stroke = am4core.color(lineColor) // 선 색상 설정
-          series.fill = series.stroke
+
           let gradient = new am4core.LinearGradient()
           gradient.addColor(am4core.color(startColor))
           gradient.addColor(am4core.color(endColor))
           gradient.rotation = 90
-          series.fill.gradient = gradient
+          series.fill = gradient
 
           return series
         }
@@ -135,23 +135,23 @@
         createSeries(
           'visits',
           'NAV',
-          'rgba(240, 41, 90, 0.9)',
           'rgba(240, 41, 90, 1)',
-          'rgba(240, 41, 90, 0.5)'
+          'rgba(240, 41, 90, 0.3)',
+          'rgba(240, 41, 90, 0)'
         )
         createSeries(
           'visits2',
           '기초지수',
-          'rgba(38, 193, 248, 0.9)',
-          'rgba(72, 150, 255, 1)',
-          'rgba(72, 150, 255, 0.5)'
+          'rgba(38, 193, 248, 1)',
+          'rgba(72, 150, 255, 0.3)',
+          'rgba(72, 150, 255, 0)'
         )
         createSeries(
           'visits3',
           '종가',
           'rgba(29, 181, 174, 1)',
-          'rgba(29, 181, 174, 1)',
-          'rgba(29, 181, 174, 0.5)'
+          'rgba(29, 181, 174, 0.3)',
+          'rgba(29, 181, 174, 0)'
         )
 
         // Add cursor
@@ -160,11 +160,10 @@
         // chart.scrollbarX = new am4core.Scrollbar(); // hadle bar
 
         const addIconEvent = () => {
-          // **별 모양 이미지 로드**
-
           // Add simple bullet
           const bullet = series.bullets.push(new am4charts.Bullet())
           const image = bullet.createChild(am4core.Image)
+
           image.href = './images/icon_star.svg'
           image.width = 24
           image.height = 24
