--- a/amChart/map/map_04.html
+++ b/amChart/map/map_04.html
@@ -68,8 +68,32 @@
       }
 
       .map-tooltip {
+        position: absolute;
+        left: -42.5px;
+        top: -80px;
+        font-size: 15px;
         min-width: 100px;
         text-align: center;
+        color: #fff;
+        background-color: #004096;
+        border-radius: 6px;
+        padding: 10px 0;
+      }
+      .map-tooltip::after {
+        content: '';
+        position: absolute;
+        bottom: -10px; /* 화살표 위치 조정 */
+        left: 50%;
+        margin-left: -5px; /* 화살표의 가로 크기의 절반 */
+        border-width: 5px;
+        border-style: solid;
+        border-color: #004096 transparent transparent transparent; /* 화살표 색상 */
+      }
+      .map-tooltip-value {
+        display: block;
+        font-size: 20px;
+        font-weight: 600;
+        margin-top: 5px;
       }
     </style>
   </head>
@@ -106,9 +130,12 @@
 
         chart.geodata = am4geodata_worldLow
         chart.projection = new am4maps.projections.Miller()
+        chart.seriesContainer.draggable = false // 드래그 비활성화
+        chart.seriesContainer.resizable = false // 크기 조절 비활성화
+        chart.maxZoomLevel = 1 // 최대 줌 레벨 설정
 
         polygonSeries.useGeodata = true
-        polygonSeries.exclude = ['AQ'] // 남극, 그린란드 제외
+        polygonSeries.exclude = ['AQ', 'GL'] // 남극, 그린란드 제외
 
         // 도트 패턴 생성
         var pattern = new am4core.CirclePattern()
@@ -128,16 +155,19 @@
         imageSeries.data = [
           {
             title: '서유럽',
+            value: 0.8,
             latitude: 51.5002,
             longitude: -0.1262
           },
           {
             title: '아시아',
+            value: 0.8,
             latitude: 37.5139,
             longitude: 126.9828
           },
           {
             title: '북미',
+            value: 96.3,
             latitude: 38.8921,
             longitude: -77.0241
           }
@@ -174,9 +204,16 @@
 
           // 툴팁 생성
           const tooltip = document.createElement('div')
+          const value = document.createElement('strong')
+
+          value.className = 'map-tooltip-value'
+          value.innerHTML = image.dataItem.dataContext.value + '%'
+
           tooltip.style.position = 'absolute'
           tooltip.className = 'map-tooltip'
           tooltip.innerHTML = image.dataItem.dataContext.title
+
+          tooltip.appendChild(value)
           holder.appendChild(tooltip)
 
           // 도트 생성
