지도맵 수정

--- a/amChart/map/map_04.html
+++ b/amChart/map/map_04.html
@@ -105,22 +105,36 @@
     <script src="../lib/core.js"></script>
     <script src="../lib/charts.js"></script>
     <script src="../lib/animated.js"></script>
-    <script src="../lib/material.js"></script>
-    <script src="../lib/de_DE.js"></script>
-    <script src="../lib/germanyLow.js"></script>
     <script src="../lib/maps.js"></script>
     <script src="../lib/worldLow.js"></script>
-    <script src="../lib/continentsLow.js"></script>
 
     <!-- Chart code -->
     <script>
-      am4core.ready(function () {
+      const chartData = [
+        {
+          title: '서유럽',
+          value: 0.8,
+          latitude: 51.5002,
+          longitude: -0.1262
+        },
+        {
+          title: '아시아',
+          value: 0.8,
+          latitude: 37.5139,
+          longitude: 126.9828
+        },
+        {
+          title: '북미',
+          value: 96.3,
+          latitude: 38.8921,
+          longitude: -77.0241
+        }
+      ]
+
+      const mapChart = (id, data) => {
         am4core.useTheme(am4themes_animated)
 
-        const targetSVG =
-          'M9,0C4.029,0,0,4.029,0,9s4.029,9,9,9s9-4.029,9-9S13.971,0,9,0z M9,15.93 c-3.83,0-6.93-3.1-6.93-6.93S5.17,2.07,9,2.07s6.93,3.1,6.93,6.93S12.83,15.93,9,15.93 M12.5,9c0,1.933-1.567,3.5-3.5,3.5S5.5,10.933,5.5,9S7.067,5.5,9,5.5 S12.5,7.067,12.5,9z'
-
-        const chart = am4core.create('map-chart-01', am4maps.MapChart)
+        const chart = am4core.create(id, am4maps.MapChart)
         const polygonSeries = chart.series.push(new am4maps.MapPolygonSeries())
         const polygonTemplate = polygonSeries.mapPolygons.template
         const hs = polygonTemplate.states.create('hover')
@@ -133,11 +147,12 @@
         chart.seriesContainer.draggable = false // 드래그 비활성화
         chart.seriesContainer.resizable = false // 크기 조절 비활성화
         chart.maxZoomLevel = 1 // 최대 줌 레벨 설정
+        chart.deltaLongitude = -154.8 // 지도 좌우 변환
 
         polygonSeries.useGeodata = true
         polygonSeries.exclude = ['AQ', 'GL'] // 남극, 그린란드 제외
 
-        // 도트 패턴 생성
+        // 도트 패턴
         var pattern = new am4core.CirclePattern()
         pattern.width = 7
         pattern.height = 7
@@ -145,37 +160,19 @@
         pattern.fill = am4core.color('#B9C6D8') // 빨간색으로 설정
         pattern.strokeWidth = 0 // 테두리 제거
 
-        // 패턴을 국가들에 적용
+        // 패턴 적용
         polygonTemplate.fill = pattern
 
-        // set propertyfields
+        // 속성 설정
         imageSeriesTemplate.propertyFields.longitude = 'longitude'
         imageSeriesTemplate.propertyFields.latitude = 'latitude'
 
-        imageSeries.data = [
-          {
-            title: '서유럽',
-            value: 0.8,
-            latitude: 51.5002,
-            longitude: -0.1262
-          },
-          {
-            title: '아시아',
-            value: 0.8,
-            latitude: 37.5139,
-            longitude: 126.9828
-          },
-          {
-            title: '북미',
-            value: 96.3,
-            latitude: 38.8921,
-            longitude: -77.0241
-          }
-        ]
+        imageSeries.data = data
 
         chart.events.on('ready', updateCustomMarkers)
         chart.events.on('mappositionchanged', updateCustomMarkers)
 
+        // 마커 좌표 업데이트
         function updateCustomMarkers(event) {
           imageSeries.mapImages.each(function (image) {
             if (!image.dummyData || !image.dummyData.externalElement) {
@@ -194,6 +191,7 @@
           })
         }
 
+        // 마커, 툴팁 생성
         function createCustomMarker(image) {
           const chart = image.dataItem.component.chart
 
@@ -239,9 +237,9 @@
 
           return holder
         }
+      }
 
-        chart.deltaLongitude = -154.8
-      })
+      mapChart('map-chart-01', chartData)
     </script>
   </body>
 </html>
