--- a/amChart/linechart/linechart_04.html
+++ b/amChart/linechart/linechart_04.html
@@ -21,12 +21,12 @@
   <body>
     <div id="chartdiv"></div>
 
-    <script src="./lib/core.js"></script>
-    <script src="./lib/charts.js"></script>
-    <script src="./lib/animated.js"></script>
-    <script src="./lib/material.js"></script>
-    <script src="./lib/de_DE.js"></script>
-    <script src="./lib/germanyLow.js"></script>
+    <script src="../lib/core.js"></script>
+    <script src="../lib/charts.js"></script>
+    <script src="../lib/animated.js"></script>
+    <script src="../lib/material.js"></script>
+    <script src="../lib/de_DE.js"></script>
+    <script src="../lib/germanyLow.js"></script>
 
     <script>
       am4core.ready(function () {
@@ -273,7 +273,7 @@
           const bullet = series.bullets.push(new am4charts.Bullet());
           const image = bullet.createChild(am4core.Image);
 
-          image.href = "./images/icon_star.svg";
+          image.href = "../images/icon_star.svg";
           image.width = 24;
           image.height = 24;
           image.horizontalCenter = "middle";
