--- a/amChart/linechart/linechart_05.html
+++ b/amChart/linechart/linechart_05.html
@@ -15,54 +15,33 @@
       #chartdiv {
         width: 98%;
         height: 600px;
-        border: 1px solid #ccc;
+        border: 1px solid #d4d8e2;
         padding: 0;
         margin: 10px;
       }
       .lineTooltip {
-        padding: 5px;
+        box-shadow: none;
       }
       .lineTooltip li {
         position: relative;
-        margin: 5px 0;
-      }
-      .lineTooltip li:not(:first-child) {
-        padding-left: 15px;
+        margin: 2px 0;
+        color: #232433;
       }
       .lineTooltip li span {
         display: inline-block;
         font-size: 13px;
         font-weight: 400;
-        color: rgba(255, 255, 255, 0.8);
+        color: #232433;
         margin-right: 10px;
       }
 
       .lineTooltip li:first-child {
-        font-family: pretendard;
         font-weight: 700;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
       }
 
-      .lineTooltip li::after {
-        content: "";
-        width: 10px;
-        height: 10px;
-        border-radius: 4px;
-        position: absolute;
-        left: 0;
-        top: 50%;
-        z-index: 1;
-        transform: translate3d(0, -50%, 0);
-      }
-
-      .lineTooltip li:nth-child(2)::after {
-        background-color: #8681ff;
-      }
-      .lineTooltip li:nth-child(3)::after {
-        background-color: #26c1f8;
-      }
-      .lineTooltip li:nth-child(4)::after {
-        background-color: #1db5ae;
+      .linechart-chkbox {
+        display: flex;
       }
     </style>
   </head>
@@ -83,6 +62,7 @@
         const chart = am4core.create("chartdiv", am4charts.XYChart);
         const dateAxis = chart.xAxes.push(new am4charts.DateAxis());
         const valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
+        const categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 
         let series = null;
         let bullet = null;
@@ -97,7 +77,7 @@
 
           let visits = Array(10).fill(0);
           visits = visits.map((visit, index) => {
-            if (index === 0) return -10;
+            if (index === 0) return -1;
             if (index === 1) return 3;
             if (index === 2) return 0;
             return -5;
@@ -134,19 +114,22 @@
           // Create series for each data field
           createSeries(
             "visits1",
-            "개인",
-            "#8681FF" // lineColor
+            "rgba(72, 150, 255, 1)", // lineColor
+            "rgba(72, 150, 255, 0.3)", // startColor
+            "rgba(72, 150, 255, 0)" // endColor
           );
-          createSeries(
-            "visits2",
-            "기관",
-            "#26C1F8" // lineColor
-          );
-          createSeries(
-            "visits3",
-            "은행",
-            "#1DB5AE" // lineColor
-          );
+          // createSeries(
+          //   "visits2",
+          //   "rgba(38, 193, 248, 1)", // lineColor
+          //   "rgba(72, 150, 255, 0.3)", // startColor
+          //   "rgba(72, 150, 255, 0)" // endColor
+          // );
+          // createSeries(
+          //   "visits3",
+          //   "rgba(29, 181, 174, 1)", // lineColor
+          //   "rgba(29, 181, 174, 0.3)", // startColor
+          //   "rgba(29, 181, 174, 0)" // endColor
+          // );
         }
 
         // 커서 설정
@@ -155,25 +138,17 @@
           chart.cursor.lineY.disabled = true;
           chart.cursor.maxTooltipDistance = -1;
 
+          chart.cursor.lineX.stroke = am4core.color("#4896FF");
+          chart.cursor.fullWidthLineX = true;
+
+          chart.cursor.lineX.strokeWidth = 2;
+          chart.cursor.lineX.strokeOpacity = 1;
+          chart.cursor.lineX.strokeDasharray = "";
+
+          chart.cursor.snapToSeries = [series]; // 커서 자르기
+
           // 드래그하여 X축과 Y축 모두에서 줌 가능하게 설정
           chart.cursor.behavior = "zoomXY";
-        }
-
-        // 차트 제목
-        function legendHandler() {
-          chart.legend = new am4charts.Legend();
-          chart.legend.useDefaultMarker = true;
-
-          chart.legend.position = "top";
-          chart.legend.fontSize = 15;
-          chart.legend.width = 300;
-          chart.legend.padding(0, 0, 10, 0);
-          chart.legend.labels.template.fill = am4core.color("#232433");
-          chart.legend.dx = -45;
-
-          const markerTemplate = chart.legend.markers.template;
-          markerTemplate.width = 16;
-          markerTemplate.height = 16;
         }
 
         // 날짜 형식
@@ -204,7 +179,7 @@
           dateAxis.renderer.labels.template.dx = 0;
           dateAxis.renderer.labels.template.dy = 0;
 
-          dateAxis.startLocation = -3; // X축의 시작점을 약간 오른쪽으로 이동
+          dateAxis.startLocation = 0; // X축의 시작점을 약간 오른쪽으로 이동
           dateAxis.endLocation = 0; // X축의 끝점을 약간 왼쪽으로 이동
 
           // x축 하단 세로바
@@ -224,34 +199,41 @@
         // y축 설정
         function setValueAxis() {
           valueAxis.renderer.baseGrid.disabled = true;
-          valueAxis.renderer.grid.template.strokeOpacity = 0.5;
+          valueAxis.renderer.grid.template.strokeOpacity = 1;
           valueAxis.renderer.grid.template.strokeDasharray = 3;
           valueAxis.renderer.grid.template.stroke = am4core.color("#D4D8E2");
           valueAxis.renderer.labels.template.fill = am4core.color("#71747c");
           valueAxis.renderer.labels.template.fontSize = 14;
 
           // y축라벨 위치 내부로 이동
-          valueAxis.renderer.inside = true;
+          valueAxis.renderer.inside = false;
           valueAxis.renderer.maxLabelPosition = 0.99;
-          valueAxis.renderer.labels.template.dx = -10;
-          valueAxis.renderer.labels.template.dy = -15;
+          valueAxis.renderer.labels.template.dx = 0;
+          valueAxis.renderer.labels.template.dy = 0;
 
           valueAxis.tooltip.disabled = true; // 축툴팁 감추기
         }
 
         // 차트 시리즈 생성
-        const createSeries = (field, name, lineColor) => {
+        const createSeries = (field, lineColor, startColor, endColor) => {
           series = chart.series.push(new am4charts.LineSeries());
           series.dataFields.valueY = field;
           series.dataFields.dateX = "date";
 
-          series.name = name; // legend 네임에 들어감
+          series.name = field; // legend 네임에 들어감
           series.strokeWidth = 2; // 차트라인 두께
-          series.fillOpacity = 0; // 차트배경 투명도
-          series.tensionX = 1; // 곡선 효과
+          series.fillOpacity = 0.7; // 차트배경 투명도
+          series.tensionX = 0.7; // 곡선 효과
 
           series.fill = am4core.color(lineColor); // 배경 색상 설정
           series.stroke = am4core.color(lineColor); // 선 색상 설정
+
+          // 그라데이션
+          let gradient = new am4core.LinearGradient();
+          gradient.addColor(am4core.color(startColor));
+          gradient.addColor(am4core.color(endColor));
+          gradient.rotation = 90;
+          series.fill = gradient;
 
           // 기본 블릿
           const bullet = series.bullets.push(new am4charts.CircleBullet());
@@ -263,12 +245,18 @@
           circleHover.properties.scale = 1; // 기본블릿 마우스 오버 스케일
 
           // 기본블릿 스타일
-          circle.width = 16;
-          circle.height = 16;
-          circle.strokeWidth = 10;
-          circle.strokeOpacity = 0.2;
-          circle.stroke = am4core.color(lineColor).lighten(0.2);
+          circle.width = 18;
+          circle.height = 18;
+          circle.strokeWidth = 4;
+          circle.strokeOpacity = 1;
+          circle.stroke = am4core.color("#fff");
           circle.fill = am4core.color(lineColor);
+
+          let shadow = new am4core.DropShadowFilter();
+          shadow.dx = 0;
+          shadow.dy = 2;
+          shadow.blur = 2;
+          circle.filters.push(shadow);
 
           // 툴팁 함수호출
           makeTooltip();
@@ -285,26 +273,28 @@
           series.tooltipHTML = `
             <ul class='lineTooltip'>
               <li>{date}</li>
-              <li><span>개인순매수</span> <strong>{visits1ValueY}%</strong></li>
-              <li><span>거래순매수</span> <strong>{visits2ValueY}%</strong></li>
-              <li><span>은행순매수</span> <strong>{visits3ValueY}%</strong></li>
+              <li><span>KODEX 200</span> <strong>{visits1ValueY}만</strong></li>
             </ul>`;
 
           series.tooltip.getFillFromObject = false;
-          series.tooltip.background.fill = am4core.color("#004096");
+          series.tooltip.background.fill = am4core.color("#fff");
+          series.tooltip.background.fillOpacity = 1;
+          series.tooltip.background.stroke = am4core.color("#D4D8E2"); // 툴팁 테두리 색상 설정
 
           // 툴팁 가이드 라인 설정
           series.tooltip.label.minWidth = 120; // 툴팁의 최소 너비 설정
-          series.tooltip.label.minHeight = 120; // 툴팁의 최소 높이 설정
-          series.tooltip.label.fontSize = 13; // 툴팁 내 텍스트의 폰트 크기
+          series.tooltip.label.minHeight = 60; // 툴팁의 최소 높이 설정
+          series.tooltip.label.fontSize = 12; // 툴팁 내 텍스트의 폰트 크기
           series.tooltip.pointerOrientation = "left"; // 툴팁 방향
+          series.tooltip.dx = 10; // 툴팁 좌표
 
           // 가이드 라인 스타일 설정
-          series.tooltip.background.strokeWidth = 0; // 가이드 라인 두께
-          series.tooltip.background.strokeOpacity = 0; // 가이드 라인 투명도
-          series.tooltip.background.pointerLength = 6; // 화살표 크기
+          series.tooltip.background.strokeWidth = 1; // 가이드 라인 두께
+          series.tooltip.background.strokeOpacity = 1; // 가이드 라인 투명도
+          series.tooltip.background.pointerLength = 0; // 화살표 크기
 
-          series.tooltip.dx = 10; // 툴팁 좌표
+          // 툴팁 그림자 비활성화
+          series.tooltip.background.filters.clear();
         };
 
         chartCommon();
@@ -312,7 +302,6 @@
         setDateAxis();
         setValueAxis();
         cursorHandler();
-        legendHandler();
       });
     </script>
   </body>
